--- a/templates/index.html
+++ b/templates/index.html
@@ -29,18 +29,26 @@
         </div>
 
         <div class="container mt-5">
-            <div class="row">
-            <div class="col-12">
-                <div class="list-group">
-                {% for result in results %}
-                <a href="{{ result.url }}" class="list-group-item list-group-item-action">
-                    <h5 class="mb-1">{{ result.title }}</h5>
-                    <p class="mb-1">{{ result.snippet | safe }}</p>
-                    <small>{{ result.url }}</small>
-                </a>
-                {% endfor %}
+            {% if latency %}
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <p class="text-muted">Search completed in {{ latency }} milliseconds</p>
+                    </div>
                 </div>
-            </div>
+            {% endif %}
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="list-group">
+                        {% for result in results %}
+                            <a href="{{ result.url }}" class="list-group-item list-group-item-action">
+                                <h5 class="mb-1">{{ result.title }}</h5>
+                                <p class="mb-1">{{ result.snippet | safe }}</p>
+                                <small>{{ result.url }}</small>
+                            </a>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
 
