--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,12 @@
     </head>
     <body>
         <div class="container">
-            {# <div class="search-container mt-5"> #}
+            <div class="row mt-3 mb-2">
+                <div class="col-12 text-center">
+                    <a class="text-muted" href="/stats">view indexed pages statistics</a>
+                </div>
+            </div>
+
             <div class="row mt-5 overflow-hidden text-center">
                 <div class="ps-5 pe-5">
                     <form class="form-inline d-flex justify-content-center" method="get" action="">
@@ -28,14 +33,12 @@
             </div>
         </div>
 
-        <div class="container mt-5">
-            {% if latency %}
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <p class="text-muted">Search completed in {{ latency }} milliseconds</p>
-                    </div>
-                </div>
-            {% endif %}
+        {% if latency %}
+            <div class="text-center mt-2">
+                <p class="text-muted">Search completed in {{ latency }} milliseconds</p>
+            </div>
+        {% endif %}
+        <div class="container mt-4">
 
             <div class="row">
                 <div class="col-12">
