--- a/templates/stats.html
+++ b/templates/stats.html
@@ -10,6 +10,7 @@
     <body>
         <div class="container">
             <h1 class="text-center my-3">Crawled Pages Statistics</h1>
+            <hr class="my-2">
             <table class="table table-striped">
                 <thead>
                     <tr>
