--- a/templates/stats.html
+++ b/templates/stats.html
@@ -11,6 +11,7 @@
         <div class="container">
             <h1 class="text-center my-3">Crawled Pages Statistics</h1>
             <hr class="my-2">
+            <span class="fw-bold font-monospace lh-lg fs-3">{{ total }} websites indexed</span>
             <table class="table table-striped">
                 <thead>
                     <tr>
