--- a/templates/stats.html
+++ b/templates/stats.html
@@ -12,6 +12,9 @@
             <h1 class="text-center my-3">Crawled Pages Statistics</h1>
             <hr class="my-2">
             <span class="fw-bold font-monospace lh-lg fs-3">{{ total }} pages indexed</span>
+            <br>
+            <a href="/download-index">Download tantivy index</a>
+
             <table class="table table-striped">
                 <thead>
                     <tr>
